<resources>
    <string name="app_name">CardSaver</string>
    <string name="cardname">Contact Card</string>

    <string name="action_save">Save</string>
    <string name="action_scan">Rescan</string>
    <string name="fn_hint">Full Name</string>
    <string name="title_hint">Title</string>
    <string name="cn_hint">Company</string>
    <string name="phone_hint">Phone1</string>
    <string name="email_hint">Email</string>
    <string name="website_hint">Website</string>
    <string name="main_address_hint">Street Address</string>
    <string name="alt_address_hint">Secondary Address</string>
    <string name="csz_address_hint">City, State Zip</string>
    <string name="notes_hint">Notes</string>
    <string name="switch_contact">Save to Contacts</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="error_missing_permissions">Missing Permissions</string>

    <string-array name="phone_array">
        <item>Mobile</item>
        <item>Home</item>
        <item>Fax</item>
        <item>Work</item>
    </string-array>
</resources>
