<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.app.thomasrogers.cardsaver.ContactCardActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.app.thomasrogers.cardsaver.ContactCardActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.app.thomasrogers.cardsaver.CardListActivity">

            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                android:background="@android:color/black"/>

            <Switch
                android:id="@+id/saveToContacts"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/switch_contact"/>

                <LinearLayout
                    android:id="@+id/fieldContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.75">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/fullName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:hint="@string/fn_hint"
                                android:maxLines="1"
                                android:inputType="textPersonName" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/fullNameSuggestion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".25"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.75">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:hint="@string/title_hint"
                                android:maxLines="1"
                                android:inputType="textCapWords" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/titleSuggestion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".25"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.75">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/companyName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:hint="@string/cn_hint"
                                android:maxLines="1"
                                android:inputType="textCapWords" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/companyNameSuggestion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".25"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.75">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:hint="@string/email_hint"
                                android:maxLines="1"
                                android:inputType="textEmailAddress" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/emailSuggestion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".25"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.75">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/website"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:hint="@string/website_hint"
                                android:maxLines="1"
                                android:inputType="textWebEditText" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/websiteSuggestion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".25" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <Spinner
                            android:id="@+id/typeSpinner"
                            android:layout_width="0dp"
                            android:layout_weight=".7"
                            android:layout_height="match_parent" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.05">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/phone"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:hint="@string/phone_hint"
                                android:maxLines="1"
                                android:maxLength="14"
                                android:inputType="phone" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/phoneSuggestion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".25" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.75">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/mainAddress"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:hint="@string/main_address_hint"
                                android:maxLines="1"
                                android:inputType="textPostalAddress" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/mainAddressSuggestion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".25" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.75">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/altAddress"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:hint="@string/alt_address_hint"
                                android:maxLines="1"
                                android:inputType="textPostalAddress" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/altAddressSuggestion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".25" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.75">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/cszAddress"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:hint="@string/csz_address_hint"
                                android:maxLines="1"
                                android:inputType="textPostalAddress" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/cszAddressSuggestion"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".25" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/notes"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="start"
                                android:hint="@string/notes_hint"
                                android:inputType="textAutoCorrect|textCapSentences|textMultiLine" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>